--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
         "livewire/livewire": "^2.10",
+        "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-permission": "^5.7"
     },
